Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-13139

[C++] ReadaheadGenerator cannot be safely copied/moved

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • 5.0.0
    • C++

    Description

      The readahead generator is one of the older generators and it isn't using the newer style of encapsulating all of its state within a state struct & shared_ptr.  As a result, if it is copied or moved, then the result is unpredictable.

      Attachments

        Issue Links

          Activity

            People

              westonpace Weston Pace
              westonpace Weston Pace
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 1h 10m
                  1h 10m