ARROW-13139: Moved all readahead generator state into a dedicated state struct with a shared_ptr so that readahead generators can safely be moved/copied.